--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -98,6 +98,7 @@
     .moderndesignimg > img {display:block; margin:auto; height:100px; max-height:100%; }
     .moderndesignimg1 {display:block; margin:auto; height:500px; max-height:100%; }
     #websitechanged {font-family: 'Open Sans', sans-serif;}
+	.titleicon {height:100px;}
 
     </style>
 </head>
@@ -239,9 +240,7 @@
                 <meta content="en-US">
 
                 <div class="col-lg-12">
-                    <div class="fa fa-mobile fa-5x" data-sr=
-                    'wait 0.2s then scale up 500% over 0.6s' id="mobileIcon"
-                    style="font-style: italic"></div>
+                    <img data-sr='wait .5s enter left move 500px reset over 1.0s' src="assets/img/WebDesign/phone.svg" alt="Mobile Phone Icon" class="titleicon">
 
                     <h2 style="color:black;">Mobile Friendly</h2>
 
@@ -372,11 +371,7 @@
                 <meta content="en-US">
 
                 <div class="col-lg-12">
-                    <div id="retinaIcon">
-                        <i class="fa fa-eye fa-5x" data-sr=
-                        'wait 0.5s, then enter bottom and hustle 50px over 1s reset'>
-                        </i> <!-- Icon from Font-Awesome -->
-                    </div>
+                    <img data-sr='wait .5s enter left move 500px reset over 1.0s' src="assets/img/WebDesign/eye.svg" alt="retina eye icon" class="titleicon">
 
                     <h2 style="color:black;">Retina Ready</h2>
                     <!-- Title Header -->
@@ -498,11 +493,7 @@
                 <meta content="en-US">
 
                 <div class="col-lg-12">
-                    <div data-sr='enter left move 900px reset over 0.6s' id=
-                    "speedIcon">
-                        <i class="fa fa-rocket fa-5x"></i> 
-                        <!-- Icon from Font-Awesome -->
-                    </div>
+                    <img data-sr='wait .5s enter left move 500px reset over 1.0s' src="assets/img/WebDesign/speed.svg" alt="Mobile Phone Icon" class="titleicon">
 
                     <h2 style="color:black;">Speed Sells</h2>
                     <!-- Title Header -->
@@ -689,9 +680,7 @@
                 <meta content="en-US">
 
                 <div class="col-lg-12">
-                    <div class="fa fa-cogs fa-5x" data-sr=
-                    'wait 0.5s, then enter bottom and hustle 50px over 1s reset'
-                    id="designIcon" style="font-style: italic"></div>
+                    <img data-sr='wait .5s enter left move 500px reset over 1.0s' src="assets/img/WebDesign/browser.svg" alt="Mobile Phone Icon" class="titleicon">
 
                     <h2 style="color:black;">Modern Design</h2>
 
