--- a/seo.html
+++ b/seo.html
@@ -6,14 +6,14 @@
     <meta content="width=device-width, initial-scale=1.0, user-scalable=no"
     name="viewport">
     <meta content=
-    "Website, Design, Good Design Principles, mobile, speed, modern, custom, value, fun, retina, retina ready"
+    "Website, Design, Good Design Principles, mobile, speed, modern, custom, value, fun, SEO, seo, retina, retina ready"
     name="keywords">
     <meta content=
     "Quality website design is one of the most important aspects of the modern web and customer retention. Check out our thoughts on what it takes to create truly great website!"
     name="description">
     <meta content="Good Candy Inc." name="author">
 
-    <title>Website Design - Good Candy Inc.</title><!-- Bootstrap Core CSS -->
+    <title>SEO - Good Candy Inc.</title><!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type=
     "text/css"><!-- Retina.js - Load first for faster HQ mobile images. -->
 
@@ -178,7 +178,7 @@
                     <img alt="" src="./assets/img/WebDesign.png" style=
                     "max-width:100%;">
 
-                    <h1 style="color:black;">Website Design</h1>
+                    <h1 style="color:black;">SEO Expertise</h1>
 
                     <p></p>
                     <hr class="colored">
@@ -187,16 +187,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 col-md-offset-0">
-                            <span class="aboutustext" style="color:black;">We
-                            reintroduce your company to the internet. We say
-                            (re) because even if you've never explored
-                            e-marketing before if you make a good product the
-                            internet knows about you. That's a fact. People
-                            talk and the web is where they're talking. What we
-                            do is get you in touch with these people through a
-                            combination strategy of web design, social media
-                            management, and SEO expertise. Our process is
-                            comprehensive and efficient.</span>
+                            <span class="aboutustext" style="color:black;">Search Engine Optimization (SEO) is the art and science of writing and programming a web site so that search engines can find that website most easily.</span>
                         </div>
                     </div><br>
                     <br>
@@ -205,28 +196,29 @@
                         <div class="col-md-3" data-sr=
                         'ease-in 50px wait 0.2s reset'>
                             <a class="btn btn-outline-dark crazybutton" href=
-                            "#MobileFriendly"><i class="fa fa-tablet"></i>
-                            Mobile Friendly</a>
+                            "#target"><i class="fa fa-tablet"></i>
+                            Target</a>
                         </div>
 
                         <div class="col-md-3" data-sr=
                         'ease-in 50px wait 0.4s reset'>
                             <a class="btn btn-outline-dark crazybutton" href=
-                            "#RetinaReady"><i class="fa fa-eye"></i> Retina
-                            Ready</a>
+                            "#RetinaReady"><i class="fa fa-eye"></i> 
+							Boost</a>
                         </div>
 
                         <div class="col-md-3" data-sr=
                         'ease-in 50px wait 0.6s reset'>
                             <a class="btn btn-outline-dark crazybutton" href=
-                            "#Speedy"><i class="fa fa-rocket"></i> Speedy</a>
+                            "#Speedy"><i class="fa fa-rocket"></i> 
+							Cultivate</a>
                         </div>
 
                         <div class="col-md-3" data-sr=
                         'ease-in 50px wait 0.8s reset'>
                             <a class="btn btn-outline-dark crazybutton" href=
-                            "#Modern"><i class="fa fa-cogs"></i> Modern
-                            Design</a>
+                            "#Modern"><i class="fa fa-cogs"></i> 
+							Evaluate</a>
                         </div>
                     </div>
                 </div>
@@ -242,7 +234,7 @@
                 <div class="col-lg-12">
                     <img data-sr='wait .5s enter left move 500px reset over 1.0s' src="assets/img/WebDesign/browser.svg" alt="Mobile Phone Icon" class="titleicon">
 
-                    <h2 style="color:black;">Modern Design</h2>
+                    <h2 style="color:black;">Boost Visibility in Search Engines.</h2>
 
                     <p></p>
                     <hr class="colored">
@@ -252,14 +244,8 @@
                     <div class="row">
                         <div class="col-md-12 col-md-offset-0" style=
                         "text-align:left;">
-                            <span class="aboutustext" style="color:black;">We
-                            build our sites from the ground up. For us this
-                            means freedom from outside agencies and the design,
-                            data, and functionality restrictions that come with
-                            them. For you this means that the website you'll
-                            get will be completely customized to fit the image
-                            you're looking for as well as the specific needs of
-                            your business.<br>
+                            <span class="aboutustext" style="color:black;">If you want your website to get traffic from Google or other search engines, you need to make sure that your website contains content created around the right keywords. What this means is that you should be using words that your potential audience is already using while looking for similar products or services online.
+							<br>
                             <br>
                             You can also be sure that the site you're getting
                             will look great and function smoothly. When your
@@ -378,7 +364,7 @@
         </div>
     </aside>
 	
-    <section class="bg-gray" id="MobileFriendly">
+<!--    <section class="bg-gray" id="MobileFriendly">
         <div class="container text-center">
             <div class="row">
                 <meta content="en-US">
@@ -507,7 +493,8 @@
                 </div>
             </div>
         </div>
-    </aside><!-- Process Specific Section Begin -->
+   </aside>-->
+   <!-- Process Specific Section Begin -->
 
     <section class="bg-gray" id="RetinaReady">
         <div class="container text-center">
