--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@
 
 
 
+	
     <section id="contact">
         <div class="container wow fadeIn">
             <div class="row">
@@ -423,7 +424,7 @@
             </div>
             <div class="row content-row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form method="POST" action="http://forms.brace.io/matt.stanczak@goodcandyinc.com" name="sentMessage" id="contactForm">
+                    <form method="POST" action="http://formspree.io//matt.stanczak@goodcandyinc.com" name="sentMessage" id="contactForm">
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
