--- a/index.html
+++ b/index.html
@@ -454,8 +454,7 @@
                     <div class="col-md-4 col-md-push-8">
                         <div class="project-details">
                             <img alt="" class="img-responsive client-logo" src="assets/img/client-logos/logo-1.png">
-                            <span class="project-name">Project Name</span> <span class="project-description">Branding,
-                            Website Design</span>
+                            <span class="project-name">Stanczak & Associates</span> <span class="project-description">Manufaturer's Representatives for Office Interiors</span>
                             <hr class="colored">
                             <a class="btn btn-outline-light" data-toggle="modal" href="#portfolioModal3">View Details
                             <i class="fa fa-long-arrow-right fa-fw"></i></a>
@@ -520,7 +519,7 @@
                                 <textarea class="form-control" data-validation-required-message=
                                 "Please enter a message." id="message" name="message" placeholder="Message" required=""
                                 rows="5">
-</textarea>
+								</textarea>
 
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -545,7 +544,7 @@
                 <div class="col-md-4 contact-details">
                     <h3><i class="fa fa-phone"></i> Call</h3>
 
-                    <p>777-777-7777</p>
+                    <p>XXX-XXX-XXXX</p>
                 </div>
 
                 <div class="col-md-4 contact-details">
@@ -557,7 +556,7 @@
                 <div class="col-md-4 contact-details">
                     <h3><i class="fa fa-envelope"></i> Email</h3>
 
-                    <p><a href="mailto:feedback@startbootstrap.com">goodcandyinc@gmail.com</a></p>
+                    <p><a href="mailto:info@goodcandyinc.com">info@goodcandyinc.com</a></p>
                 </div>
             </div>
 
@@ -712,12 +711,12 @@
 
                         <div class="col-lg-8 col-lg-offset-2">
                             <ul class="list-inline item-details">
-                                <li>Client: <strong><a href="http://startbootstrap.com">Start
-                                Bootstrap</a></strong></li>
+                                <li>Client: <strong><a href="http://flashbangentertainment.com">Start
+                                FlashBang Entertainment</a></strong></li>
 
-                                <li>Date: <strong><a href="http://startbootstrap.com">April 2014</a></strong></li>
+                                <li>Live Date: <strong><a href="http://flashbangentertainment.com">2015</a></strong></li>
 
-                                <li>Service: <strong><a href="http://startbootstrap.com">Web
+                                <li>Service: <strong><a href="http://flashbangentertainment.com">Entertainment
                                 Development</a></strong></li>
                             </ul><button class="btn btn-default" data-dismiss="modal" type="button"><i class=
                             "fa fa-times"></i> Close</button>
@@ -743,12 +742,12 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <img alt="" class="img-responsive img-centered" src="assets/img/client-logos/logo-1.png">
 
-                            <h2>Project Title</h2>
+                            <h2>Stanczak and Associates</h2>
                             <hr class="colored">
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos modi in tenetur vero
-                            voluptatum sapiente dolores eligendi nemo iste ea. Omnis, odio enim sint quam dolorum
-                            dolorem. Nostrum, minus, ad.</p>
+                            <p>
+							
+							</p>
                         </div>
 
                         <div class="col-lg-12"><img alt="" class="img-responsive img-centered" src=
@@ -756,12 +755,11 @@
 
                         <div class="col-lg-8 col-lg-offset-2">
                             <ul class="list-inline item-details">
-                                <li>Client: <strong><a href="http://startbootstrap.com">Start
-                                Bootstrap</a></strong></li>
+                                <li>Client: <strong><a href="http://phillyrep.com">Stanczak and Associates</a></strong></li>
 
-                                <li>Date: <strong><a href="http://startbootstrap.com">April 2014</a></strong></li>
+                                <li>Date: <strong><a href="http://phillyrep.com">2014</a></strong></li>
 
-                                <li>Service: <strong><a href="http://startbootstrap.com">Web
+                                <li>Service: <strong><a href="http://phillyrep.com">Web
                                 Development</a></strong></li>
                             </ul><button class="btn btn-default" data-dismiss="modal" type="button"><i class=
                             "fa fa-times"></i> Close</button>
