--- a/index.html
+++ b/index.html
@@ -485,9 +485,7 @@
                     name="sentMessage">
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label> <input class="form-control" data-validation-required-message=
-                                "Please enter your name." id="name" name="name" placeholder="Name" required="" type=
-                                "text">
+                                <label>Name</label> <input class="form-control" data-validation-required-message="Please enter your name." id="name" name="name" placeholder="Name" required="" type="text">
 
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -496,8 +494,7 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Email Address</label> <input class="form-control"
-                                data-validation-required-message="Please enter your email address." id="email" name=
-                                "_replyto" placeholder="Email Address" required="" type="email">
+                                data-validation-required-message="Please enter your email address." id="email" name="_replyto" placeholder="Email Address" required="" type="email">
 
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -506,8 +503,7 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Phone Number</label> <input class="form-control"
-                                data-validation-required-message="Please enter your phone number." id="phone" name=
-                                "phone" placeholder="Phone Number" required="" type="tel">
+                                data-validation-required-message="Please enter your phone number." id="phone" name="phone" placeholder="Phone Number" required="" type="tel">
 
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -516,8 +512,7 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Message</label> 
-                                <textarea class="form-control" data-validation-required-message=
-                                "Please enter a message." id="message" name="message" placeholder="Message" required=""
+                                <textarea class="form-control" data-validation-required-message="Please enter a message." id="message" name="message" placeholder="Message" required=""
                                 rows="5">
 								</textarea>
 
