--- a/index.html
+++ b/index.html
@@ -512,9 +512,8 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Message</label> 
-                                <textarea class="form-control" data-validation-required-message="Please enter a message." id="message" name="message" placeholder="Message" required=""
-                                rows="5">
-								</textarea>
+                                <textarea class="form-control" data-validation-required-message="Please enter a message." id="message" name="message" placeholder="Please Enter Message" required=""
+                                rows="5"></textarea>
 
                                 <p class="help-block text-danger"></p>
                             </div>
