--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type=
                 "button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class=
                 "icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href=
-                "#page-top"><img alt="" class="img-responsive" src="assets/img/logo.png"></a>
+                "#page-top"><img alt="" class="img-responsive logo1" src="assets/img/logo.png"></a>
             </div><!-- Collect the nav links, forms, and other content for toggling -->
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
