--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
 
         <div class="scroll-down">
-            <a class="btn fa fa-angle-down fa-fw" href="#about" style="font-style: italic"></a>
+            <a class="btn fa fa-angle-down fa-fw" href="#about" ></a>
         </div>
     </header><!-- Header End-->
     <!-- Who We are Start -->
@@ -320,7 +320,7 @@
             <div class="row content-row">
                 <div class="col-md-4">
                     <div class="media">
-                        <div class="pull-left fa fa-code" style="font-style: italic"></div>
+                        <div class="pull-left fa fa-code" ></div>
 
                         <div class="media-body">
                             <h3 class="media-heading">Website Design</h3>
@@ -345,7 +345,7 @@
 
                 <div class="col-md-4">
                     <div class="media">
-                        <div class="pull-left fa fa-comments" style="font-style: italic"></div>
+                        <div class="pull-left fa fa-comments" ></div>
 
                         <div class="media-body">
                             <h3 class="media-heading">Social Media Management</h3>
@@ -369,7 +369,7 @@
 
                 <div class="col-md-4">
                     <div class="media">
-                        <div class="pull-left fa fa-flask" style="font-style: italic"></div>
+                        <div class="pull-left fa fa-flask" ></div>
 
                         <div class="media-body">
                             <h3 class="media-heading">SEO Expertise</h3>
@@ -558,15 +558,15 @@
                 <div class="col-lg-12">
                     <ul class="list-inline">
                         <li>
-                            <a class="fa fa-facebook fa-fw fa-2x" href="#" style="font-style: italic"></a>
+                            <a class="fa fa-facebook fa-fw fa-2x" href="#" ></a>
                         </li>
 
                         <li>
-                            <a class="fa fa-twitter fa-fw fa-2x" href="#" style="font-style: italic"></a>
+                            <a class="fa fa-twitter fa-fw fa-2x" href="#" ></a>
                         </li>
 
                         <li>
-                            <a class="fa fa-linkedin fa-fw fa-2x" href="#" style="font-style: italic"></a>
+                            <a class="fa fa-linkedin fa-fw fa-2x" href="#" ></a>
                         </li>
                     </ul>
                 </div>
