--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -17,6 +17,13 @@
     <!-- Retina.js - Load first for faster HQ mobile images. -->
 
     <script src="assets/js/plugins/retina/retina.min.js"></script><!-- Font Awesome -->
+
+
+<script src="//use.typekit.net/snj6mbk.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
+
+
+
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"><!-- Default Fonts -->
     <link href=
     'http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic'
@@ -24,7 +31,11 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,600,500,700,800,900' rel='stylesheet'
     type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,700,300,800' rel='stylesheet' type=
-    'text/css'><!-- Plugin CSS -->
+    'text/css'>
+
+
+
+    <!-- Plugin CSS -->
     <link href="assets/css/plugins/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css">
     <link href="assets/css/plugins/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css">
     <link href="assets/css/plugins/owl-carousel/owl.transitions.css" rel="stylesheet" type="text/css">
