More Font Changes

--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -164,6 +164,7 @@
             height:100px
         }
 
+
     </style>
 </head>
 
@@ -424,7 +425,7 @@
 
                     <div class="row">
                         <div class="col-md-8 col-md-offset-0 Bullets">
-                            <ul class="mobilestats">
+                            <ul class="mobilestats" style="font-weight:light;">
                                 <li>As of May 2013, <b>63%</b> of adult cell owners use their phones to go online.</li>
 
                                 <li>Mobile internet usage in the US has grown by <b>73%</b> over the last 12 months to
