style css added

--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -34,6 +34,7 @@
     <link href="assets/css/plugins/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css">
     <link href="assets/css/plugins/owl-carousel/owl.transitions.css" rel="stylesheet" type="text/css">
     <link href="assets/css/plugins/jquery.fs.wallpaper.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/style.css" rel="stylesheet"><!-- Gem style -->
     <script src="assets/js/Chart.js"></script><!-- Vitality Theme CSS -->
     <!-- Uncomment the color scheme you want to use. -->
     <!-- <link href="assets/css/vitality-red.css" rel="stylesheet" type="text/css"> -->
