--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -57,6 +57,7 @@
     <![endif]-->
 
     <style>
+            aside.cta-quote .special{ }
     .owl-wrapper {
             margin-left:auto;
             margin-right:auto
@@ -158,6 +159,7 @@
         .titleicon {
             height:100px
         }
+
 
 
     </style>
@@ -578,7 +580,7 @@
         </div>
     </section>
 
-    <aside class="cta-quote" style="background-image: url('assets/img/bgaside6.png');">
+    <aside class="special cta-quote " style="background-image: url('assets/img/bgaside6.png'); background-repeat: repeat; background-color: #222;	-webkit-background-size: auto ;  -moz-background-size: auto;  background-size: auto;  -o-background-size: auto;">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s">
