Added Typekit to index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Retina.js - Load first for faster HQ mobile images. -->
     <!--    <script src="assets/js/plugins/retina/retina.min.js"></script>-->
+
+<script src="//use.typekit.net/snj6mbk.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
+    
     <!-- Font Awesome -->
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"><!-- Default Fonts -->
     <link href=
